# gravity

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/: ralph-loop.local.md
backend/: Cargo.toml  Dockerfile  config.yaml
backend/migrations/: 001_initial_schema.sql  002_add_rls_policies.sql  003_add_automation_orchestration.sql  004_add_segments_workflows_audit.sql
backend/src/: main.rs  state.rs
backend/src/config/: mod.rs
backend/src/datasource/: mod.rs
backend/src/datasource/ckdao/: mod.rs
backend/src/datasource/dbdao/: analytics.rs  approval.rs  audit.rs  auth.rs  automation.rs  campaign.rs  channel.rs  contact.rs  content.rs  dao.rs  mod.rs  schema.rs  segment.rs  user.rs  workflow.rs
backend/src/datasource/scylladao/: mod.rs
backend/src/datasource/vectordao/: mod.rs
backend/src/domain/: mod.rs
backend/src/domain/analytics/: api.rs  domain.rs  schema.rs
backend/src/domain/approval/: api.rs  domain.rs  schema.rs
backend/src/domain/audit/: api.rs  domain.rs  mod.rs  schema.rs
backend/src/domain/auth/: api.rs  domain.rs  schema.rs
backend/src/domain/automation/: api.rs  domain.rs  mod.rs  schema.rs  worker.rs
backend/src/domain/campaign/: api.rs  domain.rs  schema.rs
backend/src/domain/channel/: api.rs  domain.rs  executor.rs  mod.rs  schema.rs
backend/src/domain/contact/: api.rs  domain.rs  schema.rs
backend/src/domain/content/: api.rs  domain.rs  schema.rs
backend/src/domain/insights/: api.rs  domain.rs  schema.rs
backend/src/domain/segment/: api.rs  domain.rs  schema.rs
backend/src/domain/workflow/: api.rs  domain.rs  schema.rs
backend/src/infra/: db.rs  mod.rs  registry.rs
backend/src/utils/: http.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  BLUEPRINT.md  CHANNELS.md  DATABASE.md  ROADMAP.md  SDK.md  WORKFLOW.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/services/: api.ts  (+7 more)
(+17 files in other folders)
