[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Gravity Team"]
license = "MIT"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "10.3.0"
validator = { version = "0.20.0", features = ["derive"] }
config = "0.15"
bcrypt = "0.19.0"
futures = "0.3"
reqwest = { version = "0.13.3", features = ["json"] }
url = "2"
